[package]
name = "sys_call_loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.142"
winapi = "0.3.9"

[profile.dev]
opt-level = 0

[profile.release]
strip = "symbols"
opt-level = "z"
panic = "abort"
lto = true
codegen-units = 1